Bug 437009 – buttons with type="radio" or type="checkbox" render with the incorrect state when checked. r+sr=vlad